Fix color contrast issues on art page introduced by new palette

--- a/src/_sass/pages/art/cube.scss
+++ b/src/_sass/pages/art/cube.scss
@@ -6,7 +6,7 @@
   transform-style: preserve-3d;
   perspective: calc(var(--cube-size) * 3);
   position: relative;
-  color: var(--color-black-9);
+  color: var(--color-black);
   transform: rotateY(17deg) translateX(-30%);
 }
 
