--- a/src/_sass/pages/art/stickyNote.scss
+++ b/src/_sass/pages/art/stickyNote.scss
@@ -38,7 +38,7 @@
 }
 
 .sticky-note-description {
-  color: var(--color-black-9);
+  color: var(--color-black);
   margin: 0;
   @include font-family('cursive');
   @include font-size(2);
